- Upgrade to java21