@@ -9,7 +9,7 @@
   <name>buddypasswordmanager</name>
 
   <properties>
-    <java.version>11</java.version>
+    <java.version>21</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
   </properties>
@@ -42,15 +42,10 @@
 
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.17</version>
+        <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-          <!-- see: https://stackoverflow.com/questions/53010200/maven-surefire-could-not-find-forkedbooter-class -->
-          <argLine>-Xmx1024m -Xms1024m -XX:MaxPermSize=512m -Djdk.net.URLClassPath.disableClassPathURLCheck=true
-          </argLine>
-          <includes>
-            <include>**/*Test.java</include>
-          </includes>
+          <source>21</source>
+          <target>21</target>
         </configuration>
       </plugin>
 
@@ -83,15 +78,6 @@
         </executions>
       </plugin>
 
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <source>11</source>
-          <target>11</target>
-        </configuration>
-      </plugin>
     </plugins>
-
   </build>
 </project>
